# books-toscrape

./: README.md  analyze.py  books.csv  books_analyzed.csv  main.py  pyproject.toml  scrape.py
